--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 test.py
+dictAllSeries.pickle
+getmodelspec/src/__pycache__/sony.cpython-37.pyc
+seriesUrls.pickle
+setup.py
+getmodelspec/src/__pycache__/sony.cpython-37.pyc
+setup.py
