--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ seriesUrls.pickle
 setup.py
 getmodelspec/src/__pycache__/sony.cpython-37.pyc
 setup.py
+setup.py
+getmodelspec/src/__pycache__/sony.cpython-37.pyc
