--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ getmodelspec/src/__pycache__/sony.cpython-37.pyc
 setup.py
 setup.py
 getmodelspec/src/__pycache__/sony.cpython-37.pyc
+setup.py
+sony_TV_series_2023-06-05.xlsx
