--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ setup.py
 getmodelspec/src/__pycache__/sony.cpython-37.pyc
 setup.py
 sony_TV_series_2023-06-05.xlsx
+chromedriver_win32/chromedriver.exe
+chromedriver_win32/LICENSE.chromedriver
