--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,57 @@ chrome/First Run
 *.pb
 *.bin
 *.chromedriver
+chrome/hyphen-data/hyph-af.hyb
+chrome/hyphen-data/hyph-as.hyb
+chrome/hyphen-data/hyph-be.hyb
+chrome/hyphen-data/hyph-bg.hyb
+chrome/hyphen-data/hyph-bn.hyb
+chrome/hyphen-data/hyph-cs.hyb
+chrome/hyphen-data/hyph-cu.hyb
+chrome/hyphen-data/hyph-cy.hyb
+chrome/hyphen-data/hyph-da.hyb
+chrome/hyphen-data/hyph-de-1901.hyb
+chrome/hyphen-data/hyph-de-1996.hyb
+chrome/hyphen-data/hyph-de-ch-1901.hyb
+chrome/hyphen-data/hyph-el.hyb
+chrome/hyphen-data/hyph-en-gb.hyb
+chrome/hyphen-data/hyph-en-us.hyb
+chrome/hyphen-data/hyph-es.hyb
+chrome/hyphen-data/hyph-et.hyb
+chrome/hyphen-data/hyph-eu.hyb
+chrome/hyphen-data/hyph-fr.hyb
+chrome/hyphen-data/hyph-ga.hyb
+chrome/hyphen-data/hyph-gl.hyb
+chrome/hyphen-data/hyph-gu.hyb
+chrome/hyphen-data/hyph-hi.hyb
+chrome/hyphen-data/hyph-hr.hyb
+chrome/hyphen-data/hyph-hu.hyb
+chrome/hyphen-data/hyph-hy.hyb
+chrome/hyphen-data/hyph-it.hyb
+chrome/hyphen-data/hyph-ka.hyb
+chrome/hyphen-data/hyph-kn.hyb
+chrome/hyphen-data/hyph-la.hyb
+chrome/hyphen-data/hyph-lt.hyb
+chrome/hyphen-data/hyph-lv.hyb
+chrome/hyphen-data/hyph-ml.hyb
+chrome/hyphen-data/hyph-mn-cyrl.hyb
+chrome/hyphen-data/hyph-mr.hyb
+chrome/hyphen-data/hyph-mul-ethi.hyb
+chrome/hyphen-data/hyph-nb.hyb
+chrome/hyphen-data/hyph-nl.hyb
+chrome/hyphen-data/hyph-nn.hyb
+chrome/hyphen-data/hyph-or.hyb
+chrome/hyphen-data/hyph-pa.hyb
+chrome/hyphen-data/hyph-pt.hyb
+chrome/hyphen-data/hyph-ru.hyb
+chrome/hyphen-data/hyph-sk.hyb
+chrome/hyphen-data/hyph-sl.hyb
+chrome/hyphen-data/hyph-sq.hyb
+chrome/hyphen-data/hyph-sv.hyb
+chrome/hyphen-data/hyph-ta.hyb
+chrome/hyphen-data/hyph-te.hyb
+chrome/hyphen-data/hyph-tk.hyb
+chrome/hyphen-data/hyph-uk.hyb
+chrome/hyphen-data/hyph-und-ethi.hyb
+chrome/resources/accessibility/reading_mode_gdocs_helper/content.js
+chrome/resources/accessibility/reading_mode_gdocs_helper/gdocs_script.js
